# screenshot

./: .gitignore  .gitmodules  BaseUtil.hpp  CMakeLists.txt  DXGIScreenShot.hpp  DXGIScreenShot.hpp.bk.c++  GdiScreenShot.hpp  H264Decoder.hpp  H264Encoder.hpp  H264Mgr.cc  H264Mgr.hpp  LICENSE  README.md  YuvConvertor.hpp  build_release.bat  main.cc
testbin/: .gitignore  layer2.cfg  welenc_1080P.cfg
